fix: z-index

--- a/src/common/components/ui/header/header.module.scss
+++ b/src/common/components/ui/header/header.module.scss
@@ -1,6 +1,6 @@
 .root {
   position: fixed;
-  z-index: auto;
+  z-index: 1;
   top: 0;
   right: 0;
   left: 0;
